plugins {
    id 'application'
    id 'com.github.johnrengelman.shadow' version '5.2.0'
    id 'java'
    id 'com.palantir.git-version' version '0.12.3'
}

mainClassName = "me.zoemartin.rubie.Bot"
compileJava.options.encoding = 'UTF-8'
sourceCompatibility = 11
targetCompatibility = 11

String JDA_VERSION = "4.2.0_203"

group('me.zoemartin')
version gitVersion()

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}

repositories {
    mavenCentral()
    jcenter()
}

shadowJar {
    manifest {
        attributes 'Main-Class':             mainClassName
        attributes 'Implementation-Version': version
        attributes 'jda-version': JDA_VERSION
    }
}

repositories {
    mavenCentral()
    jcenter()
}

dependencies {
    testImplementation(group: 'junit', name: 'junit', version: '4.12')
    implementation(group:  'net.dv8tion', name:  'JDA', version:  JDA_VERSION)
    implementation('net.oneandone.reflections8:reflections8:0.11.7')
    implementation('club.minnced:discord-webhooks:0.4.1')
    implementation(group: 'org.slf4j', name: 'slf4j-simple', version: '1.7.30')
    implementation(group: 'de.androidpit', name: 'color-thief', version: '1.1.2')
    implementation(group: 'org.hibernate', name: 'hibernate-core', version: '5.4.10.Final')
    implementation(group: 'org.postgresql', name: 'postgresql', version: '42.2.16')
    implementation(group: 'com.vladmihalcea', name: 'hibernate-types-52', version: '2.9.13')
    implementation("club.minnced:discord-webhooks:0.5.0")
    implementation(group: 'net.jodah', name: 'expiringmap', version: '0.5.9')
    implementation(group: 'org.json', name: 'json', version: '20200518')
    implementation(group: 'org.apache.commons', name: 'commons-lang3', version: '3.11')
    implementation('com.google.code.gson:gson:2.8.6')
    implementation('com.sedmelluq:lavaplayer:1.3.50')
}
